# all-in-one-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
deep-learning-rs/: Cargo.toml
deep-learning-rs/src/: lib.rs  perceptron.rs
ed25519-example/: Cargo.toml
ed25519-example/src/: lib.rs
example-env/: README.md  build.rs  config.toml
example-env/src/: main.rs
example-error-handler/: Cargo.toml
example-error-handler/src/: lib.rs
examples/example-env/: Cargo.toml  test.sh
examples/example-error-handler/src/: lib.rs
examples/example-option/: Cargo.toml
examples/example-option/src/: lib.rs
examples/example-tests/: Cargo.toml
examples/example-tests/src/: lib.rs
examples/example-tests/tests/: integration_test.rs
llm-chain-example/: Cargo.toml  article_to_summarize.md
llm-chain-example/src/: main.rs  openai.rs
nom-example/src/: color.rs
oncecell-and-oncelock-example/: Cargo.toml  README.md  once_cell_tutorials.md
oncecell-and-oncelock-example/src/: complex_oncecell_example.rs  lib.rs
rpc/: README.md
rpc/example-tarpc/: Cargo.toml  README.md
rpc/example-tarpc/src/: lib.rs  main.rs
rpc/example-tonic/: Cargo.toml
rpc/example-tonic/example-tonic-client/: Cargo.toml
rpc/example-tonic/example-tonic-client/src/: main.rs
rpc/example-tonic/src/: lib.rs  main.rs
rust-co-learn/: homework.md
rust-for-rustaceans/: Cargo.toml  book.toml
rust-for-rustaceans/book/: 404.html  chapter1.rs  chapter_1.html  chapter_10.html  chapter_11.html  chapter_12.html  chapter_13.html  chapter_2.html  chapter_3.html  chapter_4.html  chapter_5.html  chapter_6.html  chapter_7.html  chapter_8.html  chapter_9.html  index.html  lib.rs  preface.html  print.html  searchindex.js  searchindex.json
rust-for-rustaceans/src/: SUMMARY.md  about_the_author.md  chapter1.rs  chapter_1.md  chapter_10.md  chapter_11.md  chapter_12.md  chapter_13.md  chapter_2.md  chapter_3.md  chapter_4.md  chapter_9.md  preface.md
sparse-by-default-cratesio/: Cargo.toml
sparse-by-default-cratesio/src/: lib.rs  main.rs
