[workspace]
members = [
    "sparse-by-default-cratesio",
    "oncecell-and-oncelock-example",
    "ed25519-example",
    "deep-learning-rs", # just for deeep learning
    "llm-chain-example",
    "rust-for-rustaceans",
    "examples/*",
]
resolver = "2"


[workspace.dependencies]
example-error-handler = { version = "0.1", path = "./examples/example-error-handler"}
nom-example = {  version = "0.1", path = "./examples/example-nom" }
deep-learning-rs = { version = "0.1", path = "./deep-learning-rs" }
ed25519-example = { version = "0.1", path = "./ed25519-example" }
oncecell-and-oncelock-example = { version = "0.1", path = "./oncecell-and-oncelock-example" }
sparse-by-default-cratesio = { version = "0.1", path = "./sparse-by-default-cratesio" }
