[package]
name = "sparse-by-default-cratesio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0", optional = true }

[features]
default = ["serde_json"]
serde_json = ["dep:serde_json"]
